crates/solite-lsp/src/tests/snapshots/solite_lsp__tests__semantic_tokens__snapshot_semantic_tokens_multiline_string.snap
---
source: crates/solite-lsp/src/tests/semantic_tokens.rs
expression: "format_semantic_tokens(\"SELECT 'hello\\nworld\\n!';\")"
snapshot_kind: text
---
keyword      SELECT
string       'hello
string       world
string       !'
operator     ;
