crates/solite-lsp/src/tests/snapshots/solite_lsp__tests__semantic_tokens__snapshot_semantic_tokens_multiline_string_two_lines.snap
---
source: crates/solite-lsp/src/tests/semantic_tokens.rs
expression: "format_semantic_tokens(\"select 'this is correctly highlighted\\nthis isnt';\")"
snapshot_kind: text
---
keyword      select
string       'this is correctly highlighted
string       this isnt'
operator     ;
